# betterpipe

./: README.md  README.rst  pyproject.toml
betterpipe/: __init__.py
tests/: test_betterpipe.py
