[tool.poetry]
name = "betterpipe"
version = "0.1.3"
description = "Betterpipe: Break free from limited observability in DevOps/MLOps platforms. Pipe .py file data to external data warehouse for complete control over model performance. Easily troubleshoot and make informed decisions. "
authors = ["Clerkie AI <clerkieai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
klotty = "^0.1.0"
boto3 = "^1.26.49"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


